[gd_scene load_steps=2 format=3 uid="uid://hud"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_hud"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_hud")

[node name="TopBar" type="HBoxContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 2
theme_override_constants/separation = 30

[node name="ScoreContainer" type="VBoxContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScoreTitle" type="Label" parent="TopBar/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "SCORE"

[node name="ScoreLabel" type="Label" parent="TopBar/ScoreContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"

[node name="DistanceContainer" type="VBoxContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DistanceTitle" type="Label" parent="TopBar/DistanceContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "DISTANCE"
horizontal_alignment = 1

[node name="DistanceLabel" type="Label" parent="TopBar/DistanceContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0m"
horizontal_alignment = 1

[node name="OrbsContainer" type="VBoxContainer" parent="TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OrbsTitle" type="Label" parent="TopBar/OrbsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
text = "ORBS"
horizontal_alignment = 2

[node name="OrbsLabel" type="Label" parent="TopBar/OrbsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "0"
horizontal_alignment = 2

[node name="PauseButton" type="Button" parent="TopBar"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "‚ùö‚ùö"

[node name="PowerupContainer" type="HBoxContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 15
alignment = 1

[node name="CoffeeIndicator" type="ColorRect" parent="PowerupContainer"]
visible = false
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
color = Color(0.6, 0.4, 0.2, 1)

[node name="Label" type="Label" parent="PowerupContainer/CoffeeIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "‚òï"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BugSquashIndicator" type="ColorRect" parent="PowerupContainer"]
visible = false
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
color = Color(0.2, 0.8, 0.2, 1)

[node name="Label" type="Label" parent="PowerupContainer/BugSquashIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "üõ°"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DuckIndicator" type="ColorRect" parent="PowerupContainer"]
visible = false
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
color = Color(1, 0.9, 0.2, 1)

[node name="Label" type="Label" parent="PowerupContainer/DuckIndicator"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "ü¶Ü"
horizontal_alignment = 1
vertical_alignment = 1
